# fastapi_celery

./: README.md  main.py  pyproject.toml
