[tool.poetry]
name = "fastapi-celery"
version = "0.1.0"
description = ""
authors = ["zongdong"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.66.0"
uvicorn = {extras = ["standard"], version = "0.14.0"}
alembic = "1.6.5"
SQLAlchemy = "1.4.20"

[tool.poetry.dev-dependencies]
celery = "5.1.2"
redis = "3.5.3"
flower = "1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
